<resources>
    <string name="app_name">Viewed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_searching">Начните искать</string>
    <string name="add_to_list">Добавить</string>
    <string name="profile">Профиль</string>
    <string name="delete">Удалить</string>
    <string name="later">Буду смотреть</string>
    <string name="viewed">Просмотрено</string>
    <string name="watch">Смотрю</string>
    <string name="error_message">Что-то пошло не так</string>
    <string name="retry">Повторить</string>
    <string name="search">Поиск</string>
    <string name="search_nav">Поиск</string>
    <string name="saved_films_nav">Мои фильмы</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="passwordRepeat">Повтор парля</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="name">User1</string>
</resources>