<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"/>

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/passwordRegisterRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordRepeat"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/registerActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"/>

</LinearLayout>