<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.fragments.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_weight="9" />

        <TextView
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/signIn"
            android:id="@+id/exitOrLogin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
            android:text="@string/viewed"
            android:textSize="11sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintRight_toLeftOf="@id/watch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/viewed" />

    <Button
            android:text="@string/watch"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintLeft_toRightOf="@id/viewed"
            android:layout_width="0dp"
            app:layout_constraintRight_toLeftOf="@id/later"
            android:layout_height="wrap_content"
            android:id="@+id/watch" />

    <Button
            android:text="@string/later"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintLeft_toRightOf="@id/watch"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/later" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProfileResult"
            android:layout_width="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/watch"
            android:layout_height="0dp"
            tools:listitem="@layout/item_profile_result_movie"/>

</androidx.constraintlayout.widget.ConstraintLayout>